RESOLVED FIXED156290
CRASH in -[WebCoreNSURLSession taskCompleted:]
https://bugs.webkit.org/show_bug.cgi?id=156290
Summary CRASH in -[WebCoreNSURLSession taskCompleted:]
Jer Noble
Reported 2016-04-06 09:15:11 PDT
CRASH in -[WebCoreNSURLSession taskCompleted:]
Attachments
Patch (2.36 KB, patch)
2016-04-06 09:21 PDT, Jer Noble
no flags
Jer Noble
Comment 1 2016-04-06 09:15:41 PDT
Jer Noble
Comment 2 2016-04-06 09:16:51 PDT
Crashed Thread: 0 Dispatch queue: com.apple.main-thread Exception Type: EXC_BAD_ACCESS (SIGSEGV) Exception Codes: KERN_INVALID_ADDRESS at 0x0000000213f3a018 Exception Note: EXC_CORPSE_NOTIFY Application Specific Information: CRASHING TEST: http/tests/media/video-buffered-range-contains-currentTime.html This process is running with libgmalloc.dylib (GuardMalloc) which may have forced the crash due to a memory access error. Thread 0 Crashed:: Dispatch queue: com.apple.main-thread 0 com.apple.WebCore 0x0000000103d9edd0 WTF::RetainPtr<WebCoreNSURLSessionDataTask>* WTF::HashTable<WTF::RetainPtr<WebCoreNSURLSessionDataTask>, WTF::RetainPtr<WebCoreNSURLSessionDataTask>, WTF::IdentityExtractor, WTF::PtrHash<WTF::RetainPtr<WebCoreNSURLSessionDataTask> >, WTF::HashTraits<WTF::RetainPtr<WebCoreNSURLSessionDataTask> >, WTF::HashTraits<WTF::RetainPtr<WebCoreNSURLSessionDataTask> > >::lookup<WTF::HashSetTranslator<WTF::PtrHash<WTF::RetainPtr<WebCoreNSURLSessionDataTask> > >, WebCoreNSURLSessionDataTask*>(WebCoreNSURLSessionDataTask* const&) + 112 1 com.apple.WebCore 0x0000000103d9bd2a std::__1::enable_if<IsSmartPtr<WTF::RetainPtr<WebCoreNSURLSessionDataTask> >::value, bool>::type WTF::HashSet<WTF::RetainPtr<WebCoreNSURLSessionDataTask>, WTF::PtrHash<WTF::RetainPtr<WebCoreNSURLSessionDataTask> >, WTF::HashTraits<WTF::RetainPtr<WebCoreNSURLSessionDataTask> > >::remove<WTF::RetainPtr<WebCoreNSURLSessionDataTask> >(WTF::GetPtrHelper<WTF::RetainPtr<WebCoreNSURLSessionDataTask> >::PtrType) + 42 2 com.apple.WebCore 0x0000000103d9bc33 -[WebCoreNSURLSession taskCompleted:] + 35 3 com.apple.JavaScriptCore 0x00000001019b0fa7 WTF::dispatchFunctionsFromMainThread() + 519 4 com.apple.Foundation 0x00007fff88e8ec82 __NSThreadPerformPerform + 326 5 com.apple.CoreFoundation 0x00007fff874d5821 __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION__ + 17
Jer Noble
Comment 3 2016-04-06 09:21:11 PDT
WebKit Commit Bot
Comment 4 2016-04-06 10:44:45 PDT
Comment on attachment 275774 [details] Patch Clearing flags on attachment: 275774 Committed r199105: <http://trac.webkit.org/changeset/199105>
WebKit Commit Bot
Comment 5 2016-04-06 10:44:49 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.