Source/WebCore/platform/network/cocoa/WebCoreNSURLSession.mm
@@ -111,6 +111,7 @@ NS_ASSUME_NONNULL_END
 - (void)taskCompleted:(WebCoreNSURLSessionDataTask *)task
 {
     ASSERT(_dataTasks.contains(task));
+    task.session = nil;
     _dataTasks.remove(task);
     if (!_dataTasks.isEmpty() || !_invalidated)
         return;
@@ -593,6 +594,10 @@ void WebCoreNSURLSessionDataTaskClient::loadFinished(PlatformMediaResource& reso
 - (void)_resource:(PlatformMediaResource&)resource loadFinishedWithError:(NSError *)error
 {
     ASSERT_UNUSED(resource, &resource == _resource);
+    if (self.state == NSURLSessionTaskStateCompleted)
+        return;
+    self.state = NSURLSessionTaskStateCompleted;
+
     RetainPtr<WebCoreNSURLSessionDataTask> strongSelf { self };
     RetainPtr<NSError> strongError { error };
     [self.session addDelegateOperation:[strongSelf, strongError] {
